2012-01-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* load.lisp: Support clisp 2.49+ module system to load CLX.

2012-01-04  Ales Guzik <ales.guzik@gmail.com>

	* src/clfswm-layout.lisp (update-layout-managed-children-keep-position):
	Fix an inattention error.

2012-01-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Protect from
	xlib:lookup-error. This prevent an error in clisp/new-clx when
	sometimes an xlib:colormap is expected instead of an xlib:window.

2012-01-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (handle-event): Fix a clisp/new-clx error
	when sometimes window slot of event-slots is a pixmap instead of a
	window.

2011-12-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp: Fill the history list with a non-nil
	value.

2011-12-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/package.lisp (make-x-drawable): Drawable wrapper to prevent
	type error in some CLX versions.
	Replace xlib:drawable-* functions with x-drawable-* equivalents

2011-12-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (um-create-xdg-section-list): Add at least
	the 'Utility menu entry.

	* src/config.lisp (*xdg-section-list*): moved to config.lisp.

	* src/clfswm-util.lisp (update-menus): Set a default value for
	searching .desktop files when XDG_DATA_DIRS is not set.

2011-10-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (place-window-from-hints): Use
	with-placement macro to place unmanaged windows in an arbitrary
	place.

2011-06-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (clean-windows-in-all-frames): Prevent
	current root and current child being equal to child.

2011-06-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/keysyms.lisp: Repeat Page_Down/Up keysym definitions at the
	end of the file to change keysyms priority.
